@@ -70,6 +70,7 @@ interface nsIStatus4Evar : nsISupports
 
 	readonly attribute long      status;
 	readonly attribute boolean   statusDefault;
+	readonly attribute boolean   statusDetectFullScreen;
 	readonly attribute boolean   statusNetwork;
 	readonly attribute boolean   statusNetworkXHR;
 	readonly attribute long      statusTimeout;
